--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Build Docker Image andp push to Docker Hub
     runs-on: ADD-DOCKER-IMAGE-HERE 
     steps:
       -
