--- a/user_sync/Dockerfile
+++ b/user_sync/Dockerfile
@@ -6,4 +6,6 @@ COPY requirements.txt ./
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY src /usr/src/app
+COPY src/* /usr/src/app
+
+CMD [ "python", "/usr/src/app/sync_users.py", "/import/", "/export/" ]
