Pass all paths as env vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,12 @@ services:
     build: ./user_sync/
     # image: # Alternative  
     volumes:
-      - ./import:/import
-      - ./export:/export
+      - ${IMPORT_FOLDER_PATH}:${IMPORT_FOLDER_PATH_CONTAINER}
+      - ${EXPORT_FOLDER_PATH}:${EXPORT_FOLDER_PATH_CONTAINER}
+      - ${PRIVILEGED_MAPPING_FOLDER}:${PRIVILEGED_MAPPING_FOLDER_CONTAINER}
     environment:
       - FSTL_CYCLOS_ADMIN_USERNAME=${FSTL_CYCLOS_ADMIN_USERNAME}
       - FSTL_CYCLOS_ADMIN_PASSWORD=${FSTL_CYCLOS_ADMIN_PASSWORD}
+      - IMPORT_FOLDER_PATH=${IMPORT_FOLDER_PATH_CONTAINER}
+      - EXPORT_FOLDER_PATH=${EXPORT_FOLDER_PATH_CONTAINER}
+      - PRIVILEGED_MAPPING_FOLDER=${PRIVILEGED_MAPPING_FOLDER_CONTAINER}
