--- a/user_sync/Dockerfile
+++ b/user_sync/Dockerfile
@@ -8,4 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY src/* /usr/src/app
 
-CMD [ "python", "/usr/src/app/sync_users.py", "/import/", "/export/" ]
+CMD [ "python", "/usr/src/app/sync_users.py"]
