--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,9 +8,12 @@ on:
 
 jobs:
   push_to_registry:
-    name: Build Docker Image andp push to Docker Hub
+    name: Build Docker Image and push to Docker Hub
     runs-on: ubuntu-latest 
     steps:
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1      
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
