--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,5 +28,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v4
         with:
+          context: ./user-sync
           push: true
           tags: damnwar/cyclos-docker:latest 
