--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v4
         with:
+          context: ./user-sync
           file: ./user-sync/Dockerfile
           push: true
           tags: damnwar/cyclos-docker:latest 
