--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   users_sync:
     build: ./user_sync/
-    # image: # Alternative  
+      # image: damnwar/cyclos-docker:latest 
     volumes:
       - ${IMPORT_FOLDER_PATH}:${IMPORT_FOLDER_PATH_CONTAINER}
       - ${EXPORT_FOLDER_PATH}:${EXPORT_FOLDER_PATH_CONTAINER}
