--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v4
         with:
-          context: ./user_sync/ 
+          context: user_sync 
           file: ./user_sync/Dockerfile
           push: true
           tags: damnwar/cyclos-docker:latest
