--- a/user-sync/docker-compose.yml
+++ b/user-sync/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   users_sync:
     # build: ./user_sync/
-    image: damnwar/cyclos-docker:latest 
+    image: damnwar/cyclos-docker_user-sync:latest 
     volumes:
       - ${IMPORT_FOLDER_PATH}:${IMPORT_FOLDER_PATH_CONTAINER}
       - ${EXPORT_FOLDER_PATH}:${EXPORT_FOLDER_PATH_CONTAINER}
