update paths, add export

--- a/ad-notification/docker-compose.yml
+++ b/ad-notification/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     image: damnwar/cyclos-docker_ad-notification:latest 
     volumes:
       - ${LAST_STATE_FILE_PATH}:${LAST_STATE_FILE_PATH_CONTAINER}
+      - ${EXPORT_PATH}:${EXPORT_PATH_CONTAINER}      
     environment:
       - FSTL_CYCLOS_ADMIN_USERNAME=${FSTL_CYCLOS_ADMIN_USERNAME}
       - FSTL_CYCLOS_ADMIN_PASSWORD=${FSTL_CYCLOS_ADMIN_PASSWORD}
-      - LAST_STATE_FILE_PATH_PATH=${LAST_STATE_FILE_PATH_CONTAINER}
+      - LAST_STATE_FILE_PATH=${LAST_STATE_FILE_PATH_CONTAINER}
+      - EXPORT_PATH=${EXPORT_PATH_CONTAINER}
