--- a/ad-notification/docker-compose.yml
+++ b/ad-notification/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
-  users_sync:
-    # build: ./user_sync/
+  ad-notification:
+    # build: .
     image: damnwar/cyclos-docker_ad-notification:latest 
     volumes:
       - ${LAST_STATE_FILE_PATH}:${LAST_STATE_FILE_PATH_CONTAINER}
