--- a/user-sync/docker-compose.yml
+++ b/user-sync/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
-  users_sync:
-    # build: ./user_sync/
+  user-sync:
+    # build: .
     image: damnwar/cyclos-docker_user-sync:latest 
     volumes:
       - ${IMPORT_FOLDER_PATH}:${IMPORT_FOLDER_PATH_CONTAINER}
